--- a/vegas.html
+++ b/vegas.html
@@ -10,13 +10,6 @@
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="./css/responsive-nav.css">
     <link rel="stylesheet" href="./css/rvr-page.css">
-    <style>
-@media (max-width: 978px) {
-	.hero h1 {
-		padding:20px 0 0;
-	}
-}
-    </style>
 
   <header class="main_h">
 
@@ -53,7 +46,6 @@
             </div>
         </li>
             <li>   <a href="./about.html">About PPC</a></li>
-            <li>   <a href="./faq.html">FAQ</a></li>
             <li>   <a href="./contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
 
@@ -92,7 +84,7 @@
 <h1 class="sec01">
 <h2 class="section-header"><a id="What_is_it_13"></a>What is it?</h2>
 <p>It’s a 3-day, full-weekend, Lolita fashion convention-style event. It's for you and every fashionista who loves EGL. It’s a weekend of shopping, learning, and partying with your Best Fashion Friends. It’s a time to unwind, relax, and engage in your favorite hobby. It’s a place where you can discuss EGL fashion with serious, like-minded individuals.</p>
-<p>For information about the organization putting on the event, the type of fashion we admire, and more, please visit <a href="./about.html">our About page</a> and <a href="./faq.html">our FAQ</a>.</p>
+<p>For information about the organization putting on the event, the type of fashion we admire, and more, please visit <a href="./about.html">our About page</a>.</p>
 <h2 class="section-header"><a id="whatsthetheme"></a>What's the Theme of Royal Vegas Retreat 2021?</h2>
 <p>The theme for Royal Vegas Retreat 2021 will be “Alice in Vegas”!</p>
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
