--- a/event/vendors.html
+++ b/event/vendors.html
@@ -46,28 +46,16 @@
             </div>
         </li>
             <li>   <a href="../about.html">About PPC</a></li>
-            <li>   <a href="../faq.html">FAQ</a></li>
             <li>   <a href="../contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
 
           </ul>
           </nav>
 
-        </div> <!-- / row -->
+        </div>
 
     </header>
 
-
-<!--- <nav class="navbar event-nav"><div class="collapse navbar-collapse" id="navbarSupportedContent1">
-  <ul>
-    <li><a href="./vegas.html">The Event</a></li>
-    <li><a href="./event/reg.html">Hotel and Registration</a></li>
-    <li><a href="./event/schedule.html">Schedule</a></li>
-    <li><a href="./event/programming.html">Programming</a></li>
-    <li><a href="./event/special-guests.html">Special Guests</a></li>
-    <li><a href="./event/tourists.html">Tourist Information</a></li>
-    <li><a href="./event/event-faq.html">Event FAQ</a></li>
-  </ul></div></nav> -->
 </head>
 <body>
 
