Cleanup about and contact heroes, remove index, start virtual event page

--- a/about.html
+++ b/about.html
@@ -69,15 +69,12 @@
 </head>
   <body>
     <div class="hero">
-
-    <h1><span>Welcome to</span><br>pretty princess club</h1>
+      <h1>About Us</h1>
 
 
 </div>
 
 <div class="row content">
-
-<h1 class="section-header">About us</h1>
 <p>Pretty Princess Club is a group of Lolita fashion fans from around the world.</p>
 <p>We wanted to see more dedicated Lolita fashion events in the United States, so we decided to put one on ourselves.</p>
 <p><img src="./images/staff/nifstaff.jpg" class="img-fluid"/></p>
