--- a/virtual.html
+++ b/virtual.html
@@ -29,7 +29,7 @@
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="./index.html" class="active">PPC Home</a></li>
+            <li> <a href="./virtual.html" class="active">PPC Home</a></li>
 
             <li>
               <button class="btnList" onclick="openList('1')">
@@ -70,24 +70,15 @@
   <body>
     <div class="hero">
 
-    <h1><span>Welcome to</span><br>pretty princess club</h1>
+ <h1>Virtual Event</h1>
 
 
 </div>
 
 <div class="row content">
+  <h2>November 13 - 15, 2020</h2>
 
-<h2 class="section-header"><a id="Welcome_to_the_club_0"></a>Welcome to the club.</h3>
-<p>Pretty Princess Club, LLC is putting on Lolita fashion events.  We’re committed to providing a world-class experience for J-fashion fans looking for the next big thing.</p>
-<p>We’re planning a fantastic event: a three-day convention in sunny, scintillating Las Vegas.  We want to put on the J-fashion party you’ve been waiting for, where you can mingle, shop, learn, and play with other EGL die-hards.</p>
-<h2><a id="Royal_Vegas_Retreat_6"></a>Royal Vegas Retreat</h4>
-<h3><a id="November_19__21_2020_8"></a>November 19 - 21 2021</h5>
-<h3><a id="MGM_Grand_Las_Vegas_NV_USA_10"></a>MGM Grand, Las Vegas, NV USA</h5>
-<p>Check it out: <a href="./vegas.html">Royal Vegas Retreat 2021</a></p>
-<h2 class="section-header">Follow Us!</h2>
-<p>Find us on social media and around the web.  We'll be posting about our journey as we get closer to Royal Vegas Retreat 2020.  Follow us for more fun and information!</p>
-<h4 class="section-header"><a href="https://www.facebook.com/ppcllcrvr/">Facebook</a> ♥ <a href="https://twitter.com/ppcllcrvr">Twitter</a> ♥ <a href="https://www.instagram.com/prettyprincess.club/">Instagram</a></h4>
-<img class="img-fluid" src="./images/crx_2019/haberdasher_edit.jpg"/>
+<p>More details coming soon!</p>
 </div>
 <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="./js/popper.min.js"></script>
