Remove references to index; add links to virtual event page; general nav cleanup where needed

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <header class="main_h">
 
       <div class="row nav-row" id="sticky_nav">
-          <a class="logo-link" href="#">
+          <a class="logo-link" href="./vegas.html">
 <img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
 </a>
           <div class="mobile-toggle">
@@ -29,7 +29,7 @@
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="./index.html" class="active">PPC Home</a></li>
+            <li> <a href="./virtual.html">Royal Vegas Online</a></li>
 
             <li>
               <button class="btnList" onclick="openList('1')">
@@ -50,7 +50,7 @@
             </p>
             </div>
         </li>
-            <li>   <a href="./about.html">About PPC</a></li>
+            <li>   <a href="./about.html" class="active">About PPC</a></li>
             <li>   <a href="./contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
 
