--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <header class="main_h">
 
       <div class="row nav-row" id="sticky_nav">
-        <a class="logo-link" href="./index.html">
+        <a class="logo-link" href="./vegas.html">
 <img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
 </a>
 
@@ -25,7 +25,7 @@
           </div>
     <nav class="topnav" id="myTopnav">
       <ul>
-      <li> <a href="./index.html">PPC Home</a></li>
+      <li> <a href="./virtual.html">Royal Vegas Online</a></li>
 
       <li>
         <button class="btnList" onclick="openList('1')">
