Add values section, fancify formatting

--- a/about.html
+++ b/about.html
@@ -75,21 +75,64 @@
 </div>
 
 <div class="row content">
-<p>Pretty Princess Club is a group of Lolita fashion fans from around the world.</p>
-<p>We wanted to see more dedicated Lolita fashion events in the United States, so we decided to put one on ourselves.</p>
+<p>Pretty Princess Club is a group of fashion fans from North America who are putting on the next generation of Lolita fashion events. Our mission is to create safe, fun, inclusive, and accessible large-scale in-person and virtual events for the EGL fashion and broader J-fashion community.</p>
+<h2>Our Values</h2>
+<p>We center Lolita fashion at our events. We love and honor all styles of Japanese alternative fashion.</p>
+<p>Alternative fashion should be an escape for everyone.</p>
+<p>Travel and tourism should be affordable.</p>
+<p>Venues should be physically accessible.</p>
+<p>We say "no" on our attendees' behalf to sex and kink at our events.</p>
+<p>You deserve luxury. Our events provide fantasy and splendor balanced with inclusion, affordability, and access for all fashion fans.</p>
+<h2>Our Staff</h2>
+<div class="row">
+  <div class="col-md-6">
 <p><img src="./images/staff/nifstaff.jpg" class="img-fluid"/></p>
+</div>
+<div class="col-md-6">
 <p><a href="https://www.facebook.com/nif.ward">Nifty Nif</a> is the founder of this operation.  She wears sweet, classic, and sweet-classic and regularly struggles to describe her eclectic wardrobe.  She loves traveling for Lolita fashion events and learning more about the international J-fashion scene.</p>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-6">
 <p><img src="./images/staff/kimbuucha.jpg" class="img-fluid"/></p>
+</div>
+<div class="col-md-6">
 <p><a href="https://www.youtube.com/channel/UC6Kk8rDRYho8quyual49hMA">Kim</a> is our Head of Registration! In her own words:</p>
 <p>Hey everyone I’m Kim, I’m 33 and I’m from the Portland, OR area. I’ve been a lolita for a little over 4 years and my style fluctuates between sweet and classic. I’ve been working in the tech industry for a hot minute as a QA engineer. I love playing board games, dancing, and karaoke. I recently dove into the world of YouTube, so I’ve been loving <a href="https://www.youtube.com/channel/UC6Kk8rDRYho8quyual49hMA">creating and editing videos for my channel.</a> I’m so excited to help plan a lolita event and am looking forward to meeting so many new faces and seeing some familiar ones in November.</p>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-6">
 <p><img src="./images/staff/harley.jpg" class="img-fluid"></p>
+</div>
+<div class="col-md-6">
 <p><a href="https://www.facebook.com/pg/HotPinkMessHarley">Harley</a> is our Special Guest Coordinator! She's an events professional from Seattle, and you can find her page on <a href="https://www.facebook.com/pg/HotPinkMessHarley">Facebook</a> and watch her videos on <a href="https://www.youtube.com/channel/UCIOJQL3cOz8uW9RXtS55y1A">YouTube</a>.</p>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-6">
 <p><img src="./images/staff/jess.jpg" class="img-fluid"></p>
+</div>
+<div class="col-md-6">
 <p><a href="https://instagram.com/jess.in.pink">Jessica</a> works on our Facebook announcements! She is a Sweet Lolita who lives in Canada. She loves to travel, especially for Lolita events, and meet new friends. She works as a Registered Nurse in the NICU and her hobbies include hiking in the Rockies, reading, and playing video games.</p>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-6">
 <p><img src="./images/staff/conner.jpg" class="img-fluid"></p>
+</div>
+<div class="col-md-6">
 <p><a href="https://instagram.com/conconbee">Conner</a> is our Fashion Show Director! In her own words: I'm from North Carolina and have been volunteering for conventions for over a decade now! I've been wearing lolita on-and-off for six years but I'm also interested in larme and himekaji. At the risk of sounding like a stereotypical lolita, I also love tea and run a blog called CLTea. When I'm not drinking tea or getting dolled up, I love thrift shopping, video games and snuggling up with my beautiful girlfriend and cat. </p>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-6">
 <p><img src="./images/staff/allie.jpg" class="img-fluid"></p>
+</div>
+<div class="col-md-6">
 <p><a href="https://instagram.com/figurativelyallie">Allie</a> is our head of Vending at Royal Vegas Retreat! In her own words: I'm Allie! I am on the vendor relations team for Royal Vegas Retreat. I am based in Charlotte, North Carolina. Back home on the east coast I am also the convention chair for Queen City Anime Convention. I am passionate about event planning, community service, and circus arts!</p>
+</div>
+</div>
 <p><a href="https://kjrstenkay.com">Kjrsten Kay</a> is the mastermind behind our beautiful logos and design elements.</p>
 <p><a href="http://moniquelopez.net">Monique</a> is the genius who built our gorgeous website.</p>
 
