Remove animation on nav bar

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/responsive-nav.css">
     <link rel="stylesheet" href="./css/ppc-page.css">
 
-  <header class="main_h">
+  <header class="main_h sticky">
 
       <div class="row nav-row" id="sticky_nav">
           <a class="logo-link" href="./vegas.html">
