--- a/virtual.html
+++ b/virtual.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/responsive-nav.css">
     <link rel="stylesheet" href="./css/ppc-page.css">
 
-  <header class="main_h">
+  <header class="main_h sticky">
 
       <div class="row nav-row" id="sticky_nav">
           <a class="logo-link" href="#">
@@ -29,7 +29,7 @@
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="./virtual.html" class="active">PPC Home</a></li>
+            <li> <a href="./virtual.html" class="active">Royal Vegas Online</a></li>
 
             <li>
               <button class="btnList" onclick="openList('1')">
