--- a/event/programming.html
+++ b/event/programming.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="../css/responsive-nav.css">
     <link rel="stylesheet" href="../css/rvr-page.css">
-  <header class="main_h">
+  <header class="main_h sticky">
 
       <div class="row nav-row" id="sticky_nav">
         <a class="logo-link" href="../vegas.html">
