--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/responsive-nav.css">
     <link rel="stylesheet" href="../css/rvr-page.css">
 
-  <header class="main_h">
+  <header class="main_h sticky">
 
       <div class="row nav-row" id="sticky_nav">
         <a class="logo-link" href="../vegas.html">
