Add virtual event branding

--- a/virtual.html
+++ b/virtual.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/waves.css">
     <link rel="stylesheet" href="./css/animate.css">
     <link rel="stylesheet" href="./css/responsive-nav.css">
-    <link rel="stylesheet" href="./css/ppc-page.css">
+    <link rel="stylesheet" href="./css/rvo-page.css">
 
   <header class="main_h sticky">
 
@@ -70,7 +70,7 @@
   <body>
     <div class="hero">
 
- <h1>Virtual Event</h1>
+ <h1>Royal Vegas Online</h1>
 
 
 </div>
