Add messaging to virtual event page

--- a/virtual.html
+++ b/virtual.html
@@ -70,16 +70,19 @@
   <body>
     <div class="hero">
 
- <h1>Royal Vegas Online</h1>
+ <h1><span>Virtual Event</span><br>Royal Vegas Online</h1>
 
 
 </div>
-
+  <center>
 <div class="row content">
   <h2>November 13 - 15, 2020</h2>
+  <h2>Via Twitch and Discord</h2>
+  <h4>Presented by Pretty Princess Club and JFashion On Demand<br>With special assistance from Bay Area Kei</h4>
 
 <p>More details coming soon!</p>
 </div>
+</center>
 <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="./js/popper.min.js"></script>
 <script type="text/javascript" src="./js/bootstrap.min.js"></script>
