Add alt text to images

--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 
       <div class="row nav-row" id="sticky_nav">
           <a class="logo-link" href="./vegas.html">
-<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
+<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
           <div class="mobile-toggle">
               <span></span>
