--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
       <div class="row nav-row" id="sticky_nav">
           <a class="logo-link" href="./vegas.html">
-<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
+<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
           <div class="mobile-toggle">
               <span></span>
@@ -86,7 +86,7 @@
 <h2>Our Staff</h2>
 <div class="row">
   <div class="col-md-6">
-<p><img src="./images/staff/nifstaff.jpg" class="img-fluid"/></p>
+<p><img src="./images/staff/nifstaff.jpg" class="img-fluid" alt="Nif at the MGM Grand Las Vegas"/></p>
 </div>
 <div class="col-md-6">
 <p><a href="https://www.facebook.com/nif.ward">Nifty Nif</a> is the founder of this operation.  She wears sweet, classic, and sweet-classic and regularly struggles to describe her eclectic wardrobe.  She loves traveling for Lolita fashion events and learning more about the international J-fashion scene.</p>
@@ -94,7 +94,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-<p><img src="./images/staff/kimbuucha.jpg" class="img-fluid"/></p>
+<p><img src="./images/staff/kimbuucha.jpg" class="img-fluid" alt="Kim looking elegant outside"/></p>
 </div>
 <div class="col-md-6">
 <p><a href="https://www.youtube.com/channel/UC6Kk8rDRYho8quyual49hMA">Kim</a> is our Head of Registration! In her own words:</p>
@@ -103,7 +103,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-<p><img src="./images/staff/harley.jpg" class="img-fluid"></p>
+<p><img src="./images/staff/harley.jpg" class="img-fluid" alt="Harley looking sassy by the rainbow sidewalks on Capitol Hill"></p>
 </div>
 <div class="col-md-6">
 <p><a href="https://www.facebook.com/pg/HotPinkMessHarley">Harley</a> is our Special Guest Coordinator! She's an events professional from Seattle, and you can find her page on <a href="https://www.facebook.com/pg/HotPinkMessHarley">Facebook</a> and watch her videos on <a href="https://www.youtube.com/channel/UCIOJQL3cOz8uW9RXtS55y1A">YouTube</a>.</p>
@@ -111,7 +111,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-<p><img src="./images/staff/jess.jpg" class="img-fluid"></p>
+<p><img src="./images/staff/jess.jpg" class="img-fluid" alt="Jess looking sweet by a cute door"></p>
 </div>
 <div class="col-md-6">
 <p><a href="https://instagram.com/jess.in.pink">Jessica</a> works on our Facebook announcements! She is a Sweet Lolita who lives in Canada. She loves to travel, especially for Lolita events, and meet new friends. She works as a Registered Nurse in the NICU and her hobbies include hiking in the Rockies, reading, and playing video games.</p>
@@ -119,7 +119,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-<p><img src="./images/staff/conner.jpg" class="img-fluid"></p>
+<p><img src="./images/staff/conner.jpg" class="img-fluid" alt="Conner in a youthful setting with a brand designer"></p>
 </div>
 <div class="col-md-6">
 <p><a href="https://instagram.com/conconbee">Conner</a> is our Fashion Show Director! In her own words: I'm from North Carolina and have been volunteering for conventions for over a decade now! I've been wearing lolita on-and-off for six years but I'm also interested in larme and himekaji. At the risk of sounding like a stereotypical lolita, I also love tea and run a blog called CLTea. When I'm not drinking tea or getting dolled up, I love thrift shopping, video games and snuggling up with my beautiful girlfriend and cat. </p>
@@ -127,7 +127,7 @@
 </div>
 <div class="row">
   <div class="col-md-6">
-<p><img src="./images/staff/allie.jpg" class="img-fluid"></p>
+<p><img src="./images/staff/allie.jpg" class="img-fluid" alt="Allie hanging upside-down from aerial silks"></p>
 </div>
 <div class="col-md-6">
 <p><a href="https://instagram.com/figurativelyallie">Allie</a> is our head of Vending at Royal Vegas Retreat! In her own words: I'm Allie! I am on the vendor relations team for Royal Vegas Retreat. I am based in Charlotte, North Carolina. Back home on the east coast I am also the convention chair for Queen City Anime Convention. I am passionate about event planning, community service, and circus arts!</p>
