--- a/event/special-guests.html
+++ b/event/special-guests.html
@@ -15,7 +15,7 @@
 
       <div class="row nav-row" id="sticky_nav">
         <a class="logo-link" href="../vegas.html">
-<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
+<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
           <div class="mobile-toggle">
               <span></span>
@@ -69,7 +69,7 @@
   <h2>Aito (Royal Princess Alice and Bio-Politics)</h2>
   <div class="row">
     <div class="col-md-4">
-  <img src="../images/guests/aito2.jpg" class="img-fluid"/>
+  <img src="../images/guests/aito2.jpg" class="img-fluid" alt="Royal Princess Alice and Bio-Politics designer Aito"/>
 </div>
 <div class="col-md-8">
   <p>【RoyalPrincessAlice】</p>
@@ -94,7 +94,7 @@
   <h2>Lovely Lor and Holly Flynn</h2>
   <div class="row">
     <div class="col-md-6">
-  <img src="../images/guests/holly_and_lor.jpg" class="img-fluid"/>
+  <img src="../images/guests/holly_and_lor.jpg" class="img-fluid" alt="Holly Flynn and Lovely Lor together"/>
 </div>
 <div class="col-md-6">
   <p>Lovely Lor is a lolita fashion YouTuber, and creator of Shit Lolitas Say, Lolita Reacts, Lolita Horror Stories and more! She’s an active member of multiple International Lolita Fashion Communities and has been interested in lolita and kawaii fashion for over 10 years. Lovely Lor has been featured in documentaries about lolita fashion such as Sugar Coated and Weird Threads. She creates videos on her youtube channel specializing in alternative fashions, positivity, and adventure!</p>
@@ -108,7 +108,7 @@
   <h2>Tyler Willis (Scarfing Scarves)</h2>
   <div class="row">
     <div class="col-md-4">
-  <img src="../images/guests/tyler.jpg" class="img-fluid"/>
+  <img src="../images/guests/tyler.jpg" class="img-fluid" alt="Tyler Willis (Scarfing Scarves)"/>
 </div>
 <div class="col-md-8">
   <p>Tyler Willis is the creator behind Last Week Lolita News, a lolita fashion news show made specifically 
@@ -124,7 +124,7 @@ and generally works as a giant envoy of catharsis for the lolita community at la
   <h2>Puvithel</h2>
   <div class="row">
     <div class="col-md-6">
-  <img src="../images/guests/puvithel.jpg" class="img-fluid"/>
+  <img src="../images/guests/puvithel.jpg" class="img-fluid" alt="Puvithel wearing her brand"/>
 </div>
 <div class="col-md-6">
   <p>Puvithel is an alternative fashion designer based in Pittsburgh, USA who has been making and designing original handmade jewelry, accessories, clothing and handbags for J-fashion and alternative styles since 2015.</p>
@@ -136,7 +136,7 @@ and generally works as a giant envoy of catharsis for the lolita community at la
   <h2>Kuroshiro Kawaii</h2>
     <div class="row">
         <div class="col-md-4">
-  <img src="../images/guests/KSKLogo_PROFILE.jpg" class="img-fluid"/>
+  <img src="../images/guests/KSKLogo_PROFILE.jpg" class="img-fluid" alt="Kuroshiro Kawaii logo"/>
 </div>
   <div class="col-md-8">
   <p>Kuroshiro Kawaii is a brand that wants to ensure that the entire community in the Houston, TX area has access to quality Japanese fashion. They pride themselves on having real connections to brand owners and designers, including Japanese, indie, and self-care brands.</p>
@@ -152,7 +152,7 @@ and generally works as a giant envoy of catharsis for the lolita community at la
   <h2>Fluffy Kawaii Jo</h2>
     <div class="row">
         <div class="col-md-4">
-  <img src="../images/guests/FluffyKawaiiJo3.jpg" class="img-fluid"/>
+  <img src="../images/guests/FluffyKawaiiJo3.jpg" class="img-fluid" alt="Fluffy Kawaii Jo in a pile of giant sprinkles"/>
 </div>
   <div class="col-md-8">
   <p>“Everybody Can Be Kawaii” – no matter what age, gender, color or body type you are, you deserve to feel kawaii as fluff and good about yourself. Fluffy Kawaii Jo lives in Switzerland and her mission is to help you feel fantastic wearing the stuff that makes you happy. She makes videos about lolita fashion and Kawaii culture in general, from practical lifehacks for people new to the fashion, product reviews, event reports and interviews with people from the scene. She also makes entertaining and funny videos like her "Action Lolita" series, proving that not only can everybody be kawaii, but you can be kawaii anywhere, doing anything as well.</p>
@@ -164,7 +164,7 @@ and generally works as a giant envoy of catharsis for the lolita community at la
   <h2>GHOST GiRL GOODS</h2>
     <div class="row">
         <div class="col-md-6">
-  <img src="../images/guests/ggg.jpg" class="img-fluid"/>
+  <img src="../images/guests/ggg.jpg" class="img-fluid" alt="Ghost Girl Goods brand owner Alexia with her crew"/>
 </div>
   <div class="col-md-6">
   <p>GHOST GiRL GOODS is a clothing brand, fusing cool hip-hop looks and cute pop style into one. Our goals are to remove labels and embrace differences, encouraging confidence in all hearts! GHOST GiRL uses her love of music, dance, and Japanese street fashion as inspiration for each piece. She has worked with Sebastian Masuda, creator of 6%DOKIDOKI, on the NEW GENERATION KAWAII Tour held in Toronto, August of 2019 and most recently represented Canada at BuriDeco/World Lolita 2020 in Japan, hosted by Triple*Fortune. GHOST GiRL looks forward to meeting you at Royal Vegas Retreat! BE STRANGE. FEAR THE NORM.</p>
