--- a/event/venue.html
+++ b/event/venue.html
@@ -15,7 +15,7 @@
 
       <div class="row nav-row" id="sticky_nav">
         <a class="logo-link" href="../vegas.html">
-<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
+<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
           <div class="mobile-toggle">
               <span></span>
@@ -78,10 +78,10 @@
 
   <p>Wondering what adventures await you on the Vegas Strip? Visit our <a href="./tourists.html">Tourism recommendations</a> for our favorite things to do on the strip.</p>
 
-  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-rendering-at-night.jpg" />
-  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-artwork.jpg" />
-  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-large-ballroom.jpg" />
-  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-lobby-area.jpg" />
+  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-rendering-at-night.jpg" alt="MGM Grand Las Vegas Conference Center from the outside at night"/>
+  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-artwork.jpg" alt="An aesthetic, cozy place to sit inside the MGM Grand Las Vegas Conference Center"/>
+  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-large-ballroom.jpg" alt="Big ballroom at the MGM Grand Las Vegas Conference Center" />
+  <img class="img-fluid" src="../images/mgm-grand/mgm-grand-meetings-conference-center-lobby-area.jpg" alt="A beautiful lobby area with electronic screens and a quirky chandelier at the MGM Grand Las Vegas Conference Center"/>
   <hr>
 
 </div>
