--- a/vegas.html
+++ b/vegas.html
@@ -15,7 +15,7 @@
 
       <div class="row nav-row" id="sticky_nav">
         <a class="logo-link" href="./vegas.html">
-<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="PPC">
+<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
           <div class="mobile-toggle">
               <span></span>
@@ -96,8 +96,8 @@
 <h2 class="section-header"><a id="I_have_a_question_25"></a>I have a question!</h2>
 <p>Please see our <a href="./event/event-faq.html">event FAQ page</a> for more information about our event. If your question isn't answered there, see our <a href="./contact.html">Contact Us page</a>.</p>
 <h2 class="section-header">Our Sponsors</h2>
-<p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid"/></a></p>
-<p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid"/></a><a href="https://kanekoshop.com/"><img src="images/kaneko.png" width="200" class="img-fluid"/></a></p>
+<p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
+<p><a href="https://arda-wigs.com/"><img src="images/arda-logo.png" width="200" class="img-fluid" alt="Arda Wigs logo"/></a><a href="https://kanekoshop.com/"><img src="images/kaneko.png" width="200" class="img-fluid" alt="Kaneko logo"/></a></p>
 </center>
 </div>
 <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
