Remove unused anchors

--- a/event/event-faq.html
+++ b/event/event-faq.html
@@ -69,21 +69,21 @@
 <div class="row content">
 
   <h1 class="section-header">Frequently Asked Questions</h1>
-  <h3 class="section-header"><a id="The_Event_43"></a>The Event</h3>
+  <h3 class="section-header">The Event</h3>
   <h4>When is Royal Vegas Retreat 2021?</h4>
   <p>Royal Vegas Retreat will take place November 19 - 21, 2021.</p>
   <h4>Where will Royal Vegas Retreat 2021 take place?</h4>
   <p>Royal Vegas Retreat will take place at the MGM Grand Resort and Casino in Las Vegas, Nevada, United States of America.</p>
   <h4>Is Royal Vegas Retreat an all-ages event?</h4>
   <p>Royal Vegas Retreat attendees must be 13 or over to buy a ticket. However, VIP ticket holders must be over 21 at the time of the event to attend the VIP-exclusive before- and after-parties.</p>
-  <h3 class="section-header"><a id="The_Venue_53"></a>The Venue</h3>
+  <h3 class="section-header">The Venue</h3>
   <h4>Where is the Royal Vegas Retreat room block?</h4>
   <p>We will be at the <a href="https://www.mgmgrand.com">MGM Grand Hotel and Casino, Las Vegas</a>.</p>
   <h4>How much does a room in the MGM Grand room block cost?</h4>
   <p>Room rates for this event start at $158/night.</p>
   <h4>Can I reserve a room for the night before and check out after the event is over?</h4>
   <p>Yes! We have set aside rooms for Thursday, November 18 and Sunday, November 21 (to check out Monday, November 22). We are planning some fun mini-events before and after the main convention - both for VIPs and GA ticket holders. We highly encourage you to come in early to get your bearings and stay late for a relaxing trip home!</p>
-  <h3 class="section-header"><a id="Registration_57"></a>Registration</h3>
+  <h3 class="section-header">Registration</h3>
   <p>See <a href="./reg.html">our main registration page</a> for more information.</p>
   <h4>Where do I buy my ticket?</h4>
   <p>Please see our <a href="https://www.eventbrite.com/e/ppc-presents-royal-vegas-retreat-2020-tickets-52897344381">Eventbrite page</a> to purchase your ticket once sales open.
@@ -101,7 +101,7 @@
   <p>Since we are postponing our event, we will allow refunds on tickets until October 1st 2020. All tickets already purchased and not refunded are automatically valid for our 2021 event.</p>
   <h4>I have a discount code for a ticket, but I won't be able to go to Royal Vegas Retreat. Can I give the ticket to a friend?</h4>
   <p>Yes! As long as you haven't already used your code to buy a ticket, you can gift it to a friend.</p>
-  <h3 class="section-header"><a id="Dress_Code_Policy_78"></a>Dress Code Policy</h3>
+  <h3 class="section-header">Dress Code Policy</h3>
   <h4>What is the dress code policy for Royal Vegas Retreat 2021?</h4>
   <p>Our dress code for Royal Vegas Retreat 2021 is as follows:</p>
   <p>Attendees must wear J-fashion to participate at the event.  This includes but is not limited to: Lolita/EGL, Ouji, Aristocrat/EGA, Mori-kei, Fairy-kei, Decora, Visual-kei, Otome, Gyaru, J-Punk, J-Goth.  Japanese as well as Western formalwear (e.g. a three-piece suit) are also allowed.</p>
@@ -110,16 +110,16 @@
   <h4>What if my non-Lolita partner or parent wants to come to Royal Vegas Retreat?</h4>
   <p>All J-fashion complies with our dress code, as well as general formalwear - you don't have to wear Lolita all weekend long, and neither does your companion.</p>
   <p>But if your travel buddy doesn't want to dress up, we have a special limited-access Partner Pass. The Partner Pass allows your partner to attend the fashion shows and shop in the vendors' room for a discounted price and no dress code requirement. The Partner Pass does not include access to panels, tea party, dance, games, coord contests, or any other part of the event outside of the fashion shows and vendors' room.</p>
-  <h3 class="section-header"><a id="Accessibility"></a>Accessibility</h3>
+  <h3 class="section-header">Accessibility</h3>
   <h4>I have dietary restrictions. Will I still be able to enjoy the Sunday afternoon tea party?</h4>
   <p>Yes! We will ask you for your dietary restrictions via Eventbrite when you purchase your ticket.</p>
   <h4>Can I rent a mobility scooter at Royal Vegas Retreat?</h4>
   <p>Yes! The MGM Grand offers mobility scooters for rent, but you'll have to call ahead to reserve one - see the MGM Grand contact information here: <a href="https://mgmgrand.mgmresorts.com/en/contact-us.html">https://mgmgrand.mgmresorts.com/en/contact-us.html</a></p>
-  <h3 class="section-header"><a id="Schedule_and_Programming_61"></a>Schedule and Programming</h3>
+  <h3 class="section-header"></a>Schedule and Programming</h3>
   <p>Coming soon!  For now, see our <a href="./programming.html">Programming</a> page for more details.</p>
-  <h3 class="section-header"><a id="COVID"></a>How will this event be affected by COVID-19?</h3>
+  <h3 class="section-header">How will this event be affected by COVID-19?</h3>
   <p>As a result of COVID-19, we are postponing our event to November 19 - 22 2021. We are cautiously optimistic that the world will be a better and safer place by then. This was a difficult decision for us to make, but we care deeply about the safety of our guests and the accessibility of our event, and as such, we believe postponement is necesssary.</p>
-  <h3 class="section-header"><a id="Volunteering_and_Sponsorship_69"></a>Volunteering and Sponsorship</h3>
+  <h3 class="section-header">Volunteering and Sponsorship</h3>
   <p>Are you interested in lending your skills to the success of Royal Vegas Retreat? <a href="./volunteers.html">Visit the Volunteers page</a> or <a href="../contact.html">contact us directly!</a></p>
   <p>We are always looking for sponsors who can donate small gifts for contest prizes and other perks for our guests. <a href="../contact.html">Contact us</a> anytime if you're interested in sponsoring our event.</p>
   <h3 class="section-header">Code of Conduct</h3>
