--- a/vegas.html
+++ b/vegas.html
@@ -82,18 +82,18 @@
               <a href="./event/volunteers.html">Volunteers</a> ♥ </p>
 
 <h1 class="sec01">
-<h2 class="section-header"><a id="What_is_it_13"></a>What is it?</h2>
+<h2 class="section-header">What is it?</h2>
 <p>It’s a 3-day, full-weekend, Lolita fashion convention-style event. It's for you and every fashionista who loves EGL. It’s a weekend of shopping, learning, and partying with your Best Fashion Friends. It’s a time to unwind, relax, and engage in your favorite hobby. It’s a place where you can discuss EGL fashion with serious, like-minded individuals.</p>
 <p>For information about the organization putting on the event, the type of fashion we admire, and more, please visit <a href="./about.html">our About page</a>.</p>
-<h2 class="section-header"><a id="whatsthetheme"></a>What's the Theme of Royal Vegas Retreat 2021?</h2>
+<h2 class="section-header">What's the Theme of Royal Vegas Retreat 2021?</h2>
 <p>The theme for Royal Vegas Retreat 2021 will be “Alice in Vegas”!</p>
 <p>Alice falls down a rabbit hole - this time, into Las Vegas. Surrounded by unfamiliar sights and sounds, she sets out to explore, and finds mad hatters, white rabbits, games and cards, mysterious bottles, queens and kings, caterpillars chain-smoking over penny slots, strange grinning cats, and more...</p>
 <p><b>Please note that you do not have to dress in accordance to the theme at Royal Vegas Retreat 2021</b> - only adhere to our dress code, described in <a href="https://prettyprincess.club/event/event-faq.html">our event FAQ</a>.</p>
-<h2 class="section-header"><a id="Where_do_I_sign_up_20"></a>Where do I sign up?</h2>
+<h2 class="section-header"></a>Where do I sign up?</h2>
 <p>As we are postponing our event, ticket sales and room block bookings are currently closed. Stay tuned for updates in 2021!</p>
-<h2 class="section-header"><a id="COVID"></a>What about COVID-19?</h2>
+<h2 class="section-header">What about COVID-19?</h2>
 <p>As a result of COVID-19, we are postponing our event until 2021.</p>
-<h2 class="section-header"><a id="I_have_a_question_25"></a>I have a question!</h2>
+<h2 class="section-header">I have a question!</h2>
 <p>Please see our <a href="./event/event-faq.html">event FAQ page</a> for more information about our event. If your question isn't answered there, see our <a href="./contact.html">Contact Us page</a>.</p>
 <h2 class="section-header">Our Sponsors</h2>
 <p><a href="https://bbandb.net/"><img src="images/bbandb_blk.png" class="img-fluid" alt="BB&B logo"/></a></p>
