Reword Bay Area Kei credit

--- a/virtual.html
+++ b/virtual.html
@@ -78,7 +78,7 @@
 <div class="row content">
   <h2>November 13 - 15, 2020</h2>
   <h2>Via Twitch and Discord</h2>
-  <h4>Presented by Pretty Princess Club and JFashion On Demand<br>With special assistance from Bay Area Kei</h4>
+  <h4>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</h4>
 
 <p>More details coming soon!</p>
 </div>
