Change FabledFawn credit

--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
 <p><a href="https://instagram.com/figurativelyallie">Allie</a> is our head of Vending at Royal Vegas Retreat! In her own words: I'm Allie! I am on the vendor relations team for Royal Vegas Retreat. I am based in Charlotte, North Carolina. Back home on the east coast I am also the convention chair for Queen City Anime Convention. I am passionate about event planning, community service, and circus arts!</p>
 </div>
 </div>
-<p><a href="https://kjrstenkay.com">Kjrsten Kay</a> is the mastermind behind our beautiful logos and design elements.</p>
+<p>Kjrsten Kay drew our logos and design elements.</p>
 <p><a href="http://moniquelopez.net">Monique</a> is the genius who built our gorgeous website.</p>
 
 </div>
