Add info and insta widget to RVO page

--- a/virtual.html
+++ b/virtual.html
@@ -80,7 +80,21 @@
   <h2>Via Twitch and Discord</h2>
   <h4>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</h4>
 
-<p>More details coming soon!</p>
+<p>We are absolutely thrilled to announce our virtual offering, Royal Vegas Online, to take place from November 13 - 15 2020</p> 
+<h2 class="section-header">What's the Theme of Royal Vegas Online?</h2>
+<p>The theme is <b>Royalty: In Your Castle</b>. We're still suffering the effects of the global pandemic, and for many of us, that means we're confined to our castles with the exception of essential work and errands. How do you make yourself feel Royal?</p>
+<p>For your fashion walk submissions and tea party coords, we encourage you to draw from the themes of royalty and nobility throughout history, and from common motifs we love in Lolita Fashion, like crowns, scepters, jewels, and thrones. Of course, our theme is just a prompt - you are not required to adhere to it at any time.</p>
+<p>We will also post inspiring Instagram prompts starting in November. How do you make your castle inviting, cozy, and aesthetic, and what do you wear to make you feel your best? Have you perfected the perfect afternoon tea to eat at home, before, during, or after a virtual tea party? We want to know - and we'll be sharing our favorite submissions.</p>
+<h2 class="section-header">How do I buy a ticket to Royal Vegas Online?</h2>
+<p>RVO is free to watch and enjoy via Twitch and Discord. However, we will distribute a sign-up form for Pub Trivia and our Sunday Tea Party, and we will require a small donation to a charity to be determined or a repost of relevant information via Instagram to ensure your spot at the tea party. Stay tuned for more details as we get closer to the event.</p>
+<h2 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h2>
+<p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021. However, we cannot predict the future, including the timelines for a COVID-19 vaccine. While we are cautiously optimistic that we will be able to hold our event in 2021, we cannot guarantee that the global pandemic situation will meaningfully improve by late 2021. Your safety matters to us, and we will continue to watch what is happening in the world and proceed accordingly. Thank you for your patience and for bearing with us throughout these uncertain times.</p>
+</div>
+<div class="row content">
+  <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
+<!-- SnapWidget -->
+<script src="https://snapwidget.com/js/snapwidget.js"></script>
+<iframe src="https://snapwidget.com/embed/875015" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
 </div>
 </center>
 <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
