Add shop link to nav on all pages

--- a/404.html
+++ b/404.html
@@ -53,6 +53,7 @@
             <li>   <a href="./about.html" class="active">About PPC</a></li>
             <li>   <a href="./contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
+            <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
 
           </ul>
           </nav>
