--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
       <li>   <a href="./about.html">About PPC</a></li>
       <li>   <a href="./contact.html" class="active">Contact Us</a></li>
       <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
-
+      <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
     </ul>
     </nav>
 
