--- a/virtual.html
+++ b/virtual.html
@@ -53,7 +53,7 @@
             <li>   <a href="./about.html">About PPC</a></li>
             <li>   <a href="./contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
-
+            <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
           </ul>
           </nav>
 
