--- a/virtual.html
+++ b/virtual.html
@@ -76,24 +76,23 @@
 </div>
   <center>
 <div class="row content">
-  <h2>November 13 - 15, 2020</h2>
-  <h2>Via Twitch and Discord</h2>
-  <h4>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</h4>
+  <h4 class="section-header">November 13 - 15, 2020<br>Via Twitch and Discord</h4>
 
-<p>We are absolutely thrilled to announce our virtual offering, Royal Vegas Online, to take place from November 13 - 15 2020</p> 
-<h2 class="section-header">What's the Theme of Royal Vegas Online?</h2>
+<p>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</p> 
+<h4 class="section-header">What's the Theme of Royal Vegas Online?</h4>
 <p>The theme is <b>Royalty: In Your Castle</b>. We're still suffering the effects of the global pandemic, and for many of us, that means we're confined to our castles with the exception of essential work and errands. How do you make yourself feel Royal?</p>
 <p>For your fashion walk submissions and tea party coords, we encourage you to draw from the themes of royalty and nobility throughout history, and from common motifs we love in Lolita Fashion, like crowns, scepters, jewels, and thrones. Of course, our theme is just a prompt - you are not required to adhere to it at any time.</p>
 <p>We will also post inspiring Instagram prompts starting in November. How do you make your castle inviting, cozy, and aesthetic, and what do you wear to make you feel your best? Have you perfected the perfect afternoon tea to eat at home, before, during, or after a virtual tea party? We want to know - and we'll be sharing a selection of submissions.</p>
-<h2 class="section-header">How do I sign up?</h2>
+<h4 class="section-header">How do I sign up?</h4>
 <p>You can join our <a href="https://www.facebook.com/events/366689871353932/">Facebook event</a>.</p>
 <p>For the <b>Fashion Walk, Coord Contest, Pub Trivia, and Tea Party</b>, you will need to sign up via our intake forms. <b>All forms open October 10 and close November 3</b>, so please mark your calendars now! We will post the forms here and on social media when they are avaiable.</p>
-<h2 class="section-header">How do I buy a ticket to Royal Vegas Online?</h2>
+<h4 class="section-header">How do I buy a ticket to Royal Vegas Online?</h4>
 <p>RVO is free to watch and enjoy via Twitch and Discord. However, we will require a small donation to a charity to be determined or a repost of relevant information via Instagram to ensure your spot at the tea party. Stay tuned for more details as we get closer to the event.</p>
-<h2 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h2>
+<h4 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h4>
 <p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021. However, we cannot predict the future, including the timelines for a COVID-19 vaccine. While we are cautiously optimistic that we will be able to hold our event in 2021, we cannot guarantee that the global pandemic situation will meaningfully improve by late 2021. Your safety matters to us, and we will continue to watch what is happening in the world and proceed accordingly. Thank you for your patience and for bearing with us throughout these uncertain times.</p>
-</div>
-<div class="row content">
+<hr>
+    <p><iframe src="https://prettyprincessclub.substack.com/embed" width="480" height="320" style="border:1px solid #000; background:white; color: #525252;" frameborder="0" scrolling="no"></iframe></p>
+    <hr>
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
 <script src="https://snapwidget.com/js/snapwidget.js"></script>
